@@ -1,0 +1,7 @@
+junit_tests(name='java',
+  dependencies=[
+    '3rdparty:junit',
+    'util/util-stats/src/main/scala',
+  ],
+  sources=rglobs('*.java')
+)
